--- a/project/sixeco.htm
+++ b/project/sixeco.htm
@@ -6,11 +6,11 @@
 		<title>Sixeco &middot; Supersense</title>
 
 <!-- This site is optimized with the Yoast SEO plugin v6.0 - https://yoast.com/wordpress/plugins/seo/ -->
-<link rel="canonical" href="http://leoguenoun.com/project/wtf" />
+<link rel="canonical" href="http://leoguenoun.com/project/sixeco" />
 <meta property="og:locale" content="fr_FR" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Sixeco &middot; Supersense" />
-<meta property="og:url" content="http://leoguenoun.com/project/wtf" />
+<meta property="og:url" content="http://leoguenoun.com/project/sixeco" />
 <meta property="og:site_name" content="Supersense" />
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:title" content="Sixeco &middot; Supersense" />
