--- a/project/misc.htm
+++ b/project/misc.htm
@@ -199,13 +199,13 @@ display: none !important;
 				<div id="overlay-menu">
 					<div class="overlay-menu-inner" data-xl-width="12">
 						<nav class="overlay-nav" data-justify="right" data-align="align-top" data-font="font_43vce2o3d">
-							<ul id="menu-semplice-menu-3" class="container"><li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-296"><a href="volvo.htm" tppabs="http://leoguenoun.com/project/volvo"><span>Debutante Group</span></a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-297"><a href="fiters.htm" tppabs="http://leoguenoun.com/project/fiters"><span>Spain Q&A</span></a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-304"><a href="loreal.htm" tppabs="http://leoguenoun.com/project/loreal"><span>Qianhe College﻿</span></a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-300"><a href="wtf.htm" tppabs="http://leoguenoun.com/project/wtf"><span>Sixeco</span></a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-301"><a href="moethennessy.htm" tppabs="http://leoguenoun.com/project/moethennessy"><span>Monata Books</span></a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-303"><a href="omega.htm" tppabs="http://leoguenoun.com/project/omega"><span>E100 Zone Coffee</span></a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-305"><a href="bnp.htm" tppabs="http://leoguenoun.com/project/bnp"><span>Jetmaster</span></a></li>
+							<ul id="menu-semplice-menu-3" class="container"><li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-296"><a href="debutante.htm" tppabs="http://leoguenoun.com/project/debutante"><span>Debutante Group</span></a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-297"><a href="spain.htm" tppabs="http://leoguenoun.com/project/spain"><span>Spain Q&A</span></a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-304"><a href="qianhe.htm" tppabs="http://leoguenoun.com/project/qianhe"><span>Qianhe College﻿</span></a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-300"><a href="sixeco.htm" tppabs="http://leoguenoun.com/project/sixeco"><span>Sixeco</span></a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-301"><a href="monata.htm" tppabs="http://leoguenoun.com/project/monata"><span>Monata Books</span></a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-303"><a href="e100.htm" tppabs="http://leoguenoun.com/project/e100"><span>E100 Zone Coffee</span></a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-305"><a href="jetmaster.htm" tppabs="http://leoguenoun.com/project/jetmaster"><span>Jetmaster</span></a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-project current-menu-item menu-item-302"><a href="misc.htm" tppabs="http://leoguenoun.com/project/misc"><span>misc.</span></a></li>
 </ul>
 						</nav>
