--- a/project/monata.htm
+++ b/project/monata.htm
@@ -206,7 +206,7 @@ display: none !important;
 <li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-300"><a href="sixeco.htm" tppabs="http://leoguenoun.com/project/sixeco"><span>Sixeco</span></a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-project current-menu-item menu-item-301"><a href="monata.htm" tppabs="http://leoguenoun.com/project/monata"><span>Monata Books</span></a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-303"><a href="e100.htm" tppabs="http://leoguenoun.com/project/e100"><span>E100 Zone Coffee</span></a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-305"><a href="bnp.htm" tppabs="http://leoguenoun.com/project/bnp"><span>Jetmaster</span></a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-305"><a href="jetmaster.htm" tppabs="http://leoguenoun.com/project/jetmaster"><span>Jetmaster</span></a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-project menu-item-302"><a href="misc.htm" tppabs="http://leoguenoun.com/project/misc"><span>misc.</span></a></li>
 </ul>
 						</nav>
