--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-
-
-<!-- Mirrored from stuartregan.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 30 Jan 2018 03:58:11 GMT -->
 <head>
-	<title>Stuart Regan &mdash; Creative Designer for your Business</title>
+	<title>Supersense &mdash; Resume & Works</title>
 </head>
 
 <link rel="stylesheet" type="text/css" href="assets/style.css">
@@ -14,77 +11,64 @@
 <body>
 
 <div class="wrapper header cf">
-	<div class="col-2 subtitle font-normal">Stuart Regan</div>
+	<div class="col-2 subtitle font-normal">Supersense</div>
 	<div class="col-2">
-		<div class="navigation">
-			<a class="link--light" href="http://fnly.co/stuart-resume" target="_blank">R&eacute;sum&eacute;</a>
-			<a class="link--light" href="#projects">Projects</a>
-			<a class="link--light" href="#about">About</a>
-			<a class="link--light" href="mailto:hi@stuartregan.com?subject=Hi &mdash; I have a project!">Send email</a>
-		</div>
-		<div class="heading font-normal">I'm Stuart Regan, a Digital Designer from London. I do websites and themes, as well as UI and UX design.</div>
+		<div class="navigation"><a class="link--light" href="#projects">Projects</a> <a class="link--light" href="#about">About</a> <a class="link--light" href="mailto:David@supersense.net.cn?subject=Hi — I have a project!">Send email</a></div>
+		<div class="heading font-normal">I'm SuperChan, a Digital Designer from Shanghai. I do websites and graphic design, as well as UI and UX design.</div>
 	</div>
 </div>
 
 <div class="wrapper portfolio-wrapper" id="projects">
-	<div class="portfolio-item" style="background-image: url(assets/images/12.png);"></div>
+	<div class="portfolio-item" style="background-image: url(assets/images/Luminous1.jpg);"></div>
 
 	<div class="cf">
-		<div class="col-2 portfolio-title font-normal"><a href="http://neueproducts.com/" target="_blank">Neue</a></div>
+		<div class="col-2 portfolio-title font-normal"><a href="http://neueproducts.com/" target="_blank">Luminous Club</a></div>
 		<div class="col-2 portfolio-description">
-			<p>Neue are an exciting, <strike>new</strike> company, focused on bringing minimal and simplistic products to light. I worked on their website and packaging design, helping bring that minimal flair to their online presence and in their product packaging.</p>
+			<p>Luminous Club is a New OTC Market of equity information release platform, while providing knowledge and training of stakeholder learning and exchange functions, based on the WeChat Official Account for the development and design.</p>
 		</div>
 	</div>
 </div>
 
 <div class="wrapper portfolio-wrapper">
-	<div class="portfolio-item" style="background-image: url(assets/images/03.2.png);"></div>
+	<div class="portfolio-item" style="background-image: url(assets/images/E1002.jpg);"></div>
 
 	<div class="cf">
-		<div class="col-2 portfolio-title font-normal"><a href="http://dottedpaper.com/" target="_blank">Dotted Paper</a></div>
+		<div class="col-2 portfolio-title font-normal">E100 Zone Coffee</div>
 		<div class="col-2 portfolio-description">
-			<p>I helped develop and produce Dotted Paper, a dot-grid notebook for creatives, alongisde <a href="http://tsapl.in/" target="_blank">Oleg Tsaplin</a> at <a href="http://finely.co/" target="_blank">Finely</a>, a London based design studio. I helped with the direction of the product design, and took the lead role for the website.</p>
+			<p>E100 Zone Coffee  is a brand design from Sixeco，in which I worked for a year. From the early brainstorming, to the final visual presentation, we design a complete set of VIS extension products with a new attempt.</p>
 		</div>
 	</div>
 </div>
 
 <div class="wrapper portfolio-wrapper">
-	<div class="portfolio-item" style="background-image: url(assets/images/10.png);"></div>
-	<div class="portfolio-item" style="background-image: url(assets/images/08.png);"></div>
-
-	<div class="cf">
-		<div class="col-2 portfolio-title font-normal">Themies</div>
+	<div class="portfolio-item" style="background-image: url(assets/images/Sixeco3.jpg);"></div>
+<div class="cf">
+    <div class="col-2 portfolio-title font-normal">Sixeco</div>
 		<div class="col-2 portfolio-description">
-			<p>A selection of custom WordPress + Tumblr themes, designed under the <a href="http://themi.es/" target="_blank">Themies</a> roof; simplistic designs focused on the content. This section is regularly updated with new designs.</p>
+			<p>Sixeco is a very creative company and also is the company that I worked for in 2016. In the past year, I had the honor to participate in the company website and brand design part.</p>
 		</div>
 	</div>
 </div>
 
 <div class="wrapper portfolio-wrapper">
-	<div class="portfolio-item" style="background-image: url(assets/images/11.png);"></div>
+	<div class="portfolio-item" style="background-image: url(assets/images/Jetmaster4.jpg);"></div>
 
 	<div class="cf">
-		<div class="col-2 portfolio-title font-normal">Fantasy Draft Soccer &mdash; UX</div>
+		<div class="col-2 portfolio-title font-normal">Jetmaster</div>
 		<div class="col-2 portfolio-description">
-			<p>In early 2016, I worked with a startup to develop the concept of a new fantasy football app/website. This involved hi-fi wireframes to map out the ideas and feature-set in the brief. This allowed us to establish a general design, and help the developers build out features from visuals.</p>
+			<p>Jetmaster, a platform for charter flights for the elite, a revolution in transportation and a subversion of private charter flights.</p>
 		</div>
 	</div>
 </div>
 
-<div class="wrapper portfolio-wrapper">
-	<div class="cf">
-		<div class="col-2 main-grid">
-			<div class="portfolio-item half" style="background-image: url(assets/images/04.png);"></div>
-		</div>
-		<div class="col-2 main-grid">
-			<div class="portfolio-item half" style="background-image: url(assets/images/05.png);"></div>
-		</div>
-	</div>
+<div class="wrapper portfolio-wrapper" id="projects">
+    <div class="portfolio-item" style="background-image: url(assets/images/Spain5.jpg);"></div>
 
 	<div class="cf">
-		<div class="col-2 portfolio-title font-normal">Various apps</div>
+		<div class="col-2 portfolio-title font-normal">Spain Q&amp;A</div>
 		<div class="col-2 portfolio-description">
-			<p>A selection of iPhone app projects (Simple Timer, left &amp; Eat It, right) in my portfolio. The goal is to always eliminate clutter and unnecessary UI to achieve the visual that is to bring a clean experience across the application.</p>
+			<p>Spain Q&amp;A is a paid-for-service platform for specialized areas and specific regions. Due to customers in Spain, project communications often require us more coordination and collaboration with each other.</p>
+			<br><br><br>
 		</div>
 	</div>
 </div>
@@ -93,31 +77,29 @@
 	<div class="wrapper cf">
 		<div class="col-2" id="about">
 			<div class="subtitle font-normal">About</div>
-			<p>I'm Stuart, a Creative Designer in London. I have worked for many companies around the world, helping build stunning designs, and provide a creative direction across multiple platforms and mediums. My services include: Websites, Branding, UI and UX, Theme design, Photography, and Videography.</p>
+			<p>I'm SuperChan, a Creative Designer in Shanghai. I have worked for 2 years, participating in build stunning designs, and provide some creative solutions due to different kind of project. My services include: Websites, Branding, UI and UX, Photography.</p>
 		</div>
 		<div class="col-2 cf" id="email">
 			<div class="contact">
 				<div class="subtitle font-normal">Contact</div>
 				<div class="cf">
-					<div class="contact-label">Email</div>
-					<div class="contact-field"><a href="mailto:hi@stuartregan.com" class="light--light--reverse">hi@stuartregan.com</a></div>
+					<div class="contact-label">Wechat</div>
+					<div class="contact-field">A_Super_Chan</a></div>
 				</div>
 				<div class="cf">
-					<div class="contact-label">Phone</div>
-					<div class="contact-field"><a href="mailto:hi@stuartregan.com?subject=Request &mdash; Phone number" class="light--light--reverse">Request</a></div>
+					<div class="contact-label">Email</div>
+					<div class="contact-field"><a href="mailto:David@supersense.net.cn?subject=Request &mdash; about your topic" class="light--light--reverse">David@supersense.net.cn</a></div>
 				</div>
 			</div>
 
 			<div class="social">
 				<div class="subtitle font-normal">Social</div>
-				<a target="_blank" class="light--light--reverse" href="http://twitter.com/stuartregan">Twitter</a>
-				<a target="_blank" class="light--light--reverse" href="http://dribbble.com/stuart">Dribbble</a>
-				<a target="_blank" class="light--light--reverse" href="http://instagram.com/stuvrt">Instagram</a>
-				<a target="_blank" class="light--light--reverse" href="http://stuart.cool/" target="_blank">Snapchat</a>
+				<a target="_blank" class="light--light--reverse" href="https://www.behance.net/chenchaoAS">Behance</a>
+				<a target="_blank" class="light--light--reverse" href="https://dribbble.com/Supersense">Dribbble</a>
 			</div>
 		</div>
 	</div>
-	<div class="wrapper footnote">&copy; 2016. All Rights Reserved</div>
+	<div class="wrapper footnote">&copy; 2018. All Rights Reserved by SuperChan</div>
 </div>
 
 </body>
