--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<div class="wrapper cf">
 		<div class="col-2" id="about">
 			<div class="subtitle font-normal">About</div>
-			<p>I'm SuperChan, a Creative Designer in Shanghai. I have worked for 2 years, participating in build stunning designs, and provide some creative solutions due to different kind of project. My services include: Websites, Branding, UI and UX, Photography.</p>
+			<p>I'm SuperChan, a Creative Designer in Shanghai. I have worked for 2 years, participating in build stunning designs, and provide some creative solutions due to different kind of projects. My services include: Websites, Branding, UI and UX, Photography.</p>
 		</div>
 		<div class="col-2 cf" id="email">
 			<div class="contact">
